--- a/Simulator/NodeSimServer/public/index.html
+++ b/Simulator/NodeSimServer/public/index.html
@@ -28,7 +28,7 @@
     <option value="1">Simulation 1</option>
     <option value="2">Simulation 2</option>
   </select>
-  <button id="controllerButton" onclick="window.open('input.html')">Input</button>
+  <button id="controllerButton" onclick="window.open('input.html', '_blank', 'width=320,height=400')">Input</button>
 
     <script type="importmap">{"imports": {"three": "/modules/three/build/three.module.min.js"} }</script>
 
